# enron-emails

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/enron_emails/: __init__.py  cli.py  download.py  embed.py  embed_chunker.py  eml_parse.py  upload.py  xml_metadata.py
tests/: conftest.py  test_embed.py  test_embed_chunker.py  test_eml_parse.py  test_smoke.py  test_xml_metadata.py
